# viewer

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/cameraframe/: cameraframe_def.rs  framedata.rs  mod.rs  mono_cast.rs  mono_ops.rs  mono_stats.rs  pixel.rs  to_file.rs
src/colormap/: mod.rs  parula.rs
src/gui/: mod.rs
src/imgproc/: imgqueue.rs  mod.rs  processor.rs  procresult.rs
src/simsource/: mod.rs
ui/: app-window.slint  groupbox.slint  led.slint  main.slint  plotter.slint  plotting.slint  shared.slint  toggleswitch.slint
